@@ -515,10 +515,18 @@ void R_CleanUp(SA_TYPE saveact, int status, int runLast)
         PrintWarnings();                                                      /* from device close and (if run) .Last */
     app_cleanup();
     RConsole = NULL;
+    // Add some protection against calling this more than once:
+    // caused by signals on Unix, so maybe cannot happen here.
     if (ifp)
+    {
         fclose(ifp); /* input file from -f or --file= */
+        ifp = NULL;
+    }
     if (ifile[0])
+    {
         unlink(ifile); /* input file from -e */
+        ifile[0] = NULL;
+    }
     exit(status);
 }
 
